<resources>
    <string name="app_name">Movies</string>
    <string name="home_tab">Home</string>
    <string name="trending_tab">Trending</string>
    <string name="search_tab">Search</string>
    <string name="favourite_tab">Favourite</string>
    <string name="no_fvourite_text">No Favourite Yet!</string>
    <string name="no_internet_primary_text">Opps! Something went wrong</string>
    <string name="no_internet_secondary_text">Check your internet and try again</string>
    <string name="no_result_primary_text">No item available</string>
    <string name="no_result_secondary_text">Nothing available on this criteria.Try resetting or clear filter from top menu</string>
    <string name="minimum_vote">Minimum Vote:</string>
    <string name="include_adult_contents">Include Adult Contents</string>
    <string name="order">Order</string>
    <string name="order_by">Order By</string>
    <string name="release_year">Release Year</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filters">Filters</string>
    <string name="clear_filters">Clear Filter</string>
    <string name="prompt_clear_filter">Are you sure, you want to clear all filters?</string>
    <string name="view_all">View All</string>
    <string name="home">Home</string>
    <string name="search_movies">Search Movies</string>
    <string name="genre_movies">%s Movies</string>
    <string name="trending_today">Trending Today</string>
    <string name="overview">Overview</string>
    <string name="trailers">Trailers</string>

    <string name="movie_search_primary_text">Search</string>
    <string name="movie_search_secondary_text">Type movie name</string>

    <string-array name="movie_sorting_criteria">
        <item>Popularity</item>
        <item>Release Date</item>
        <item>Revenue</item>
        <item>Movie Title</item>
        <item>Vote Count</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>